--- a/src/main/resources/templates/List_Departements.html
+++ b/src/main/resources/templates/List_Departements.html
@@ -32,7 +32,10 @@
                                                     <li th:text="${departement.dep}">Département</li>
                                                 </ul>
                                             </div>
-                                            <div style="float: right;" ><button class="btn btn-primary">Supprimer</button></div>
+                                            <div style="float: right; display: flex; gap: 30px;" >
+                                            	<button class="btn btn-primary">Modifier</button>
+                                            	<button class="btn btn-primary">Supprimer</button>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
