--- a/src/main/resources/templates/Create_Lieu.html
+++ b/src/main/resources/templates/Create_Lieu.html
@@ -9,7 +9,7 @@
             <!-- Page Content-->
             <section layout:fragment="body" class="py-5">
                 <div class="container px-5">
-                    <!-- Monument form-->
+                    <!-- Lieu form-->
                     <div class="bg-light rounded-4 py-5 px-4 px-md-5">
                         <div class="text-center mb-5">
                             <h1 class="fw-bolder">Lieu où se situe le monument :</h1>
@@ -38,7 +38,7 @@
                                         	name="codeInsee" 
                                         	th:field="*{codeInsee}" 
                                         	placeholder="Entrez le code Insee de la commune"/>
-                                        <label for="codeInsee">Code INSEE</label>
+                                        <label for="codeInsee">Code INSEE de la commune</label>
                                     </div>
                                     
                                     <!-- longitude -->
@@ -63,17 +63,25 @@
                                         <label for="latitude">Latitude</label>
                                     </div>
                                     
-                                    <!-- Submit success message-->
-                                    <div class="d-none" id="submitSuccessMessage">
-                                        <div class="text-center mb-3">
-                                            <div class="fw-bolder">Lieu crée avec succès!</div>
-                                        </div>
+                                    <!-- dep (departement associé à ce lieu) -->
+								    <div class="form-floating mb-3">
+                                        <input 
+                                        	class="form-control" 
+                                        	type="text" 
+                                        	name="dep" 
+                                        	th:field="*{departement.dep}" 
+                                        	placeholder="Entrez le numéro de département"/>
+                                        <label for="dep">Numéro de département</label>
                                     </div>
-                                    <!-- Submit error message-->
-                                    <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Erreur rencontrée lors de l'enrégistrement des informations!</div></div>
+								    
+								    <!-- Champ caché pour stocker le numéro de département -->
+    								<input type="hidden" name="insertedDep" th:value="${lieu.departement?.dep}" />
+                                    
                                     <!-- Submit Button-->
                                     <div class="d-grid"><button class="btn btn-primary btn-lg" id="submitButton" type="submit">Suivant</button></div>
+                                    
                                 </form>
+                                
                             </div>
                         </div>
                     </div>
