--- a/src/main/resources/templates/Create_Monument.html
+++ b/src/main/resources/templates/Create_Monument.html
@@ -74,16 +74,18 @@
                                         <label for="latitude">Latitude</label>
                                     </div>
                                     
-                                    <!-- Submit success message-->
-                                    <div class="d-none" id="submitSuccessMessage">
-                                        <div class="text-center mb-3">
-                                            <div class="fw-bolder">Monument crée avec succès!</div>
-                                        </div>
-                                    </div>
-                                    <!-- Submit error message-->
-                                    <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Erreur rencontré lors de la création du monument!</div></div>
+                                    <!-- lieu -->
+                                    <div class="form-floating mb-3">		        
+										<select class="form-control" name="codeLieu" th:field="*{codeLieu.codeInsee}">
+											<option value="" selected>Sélectionner un lieu</option>
+											<option th:each="lieu : ${lieux}" th:value="${lieu.codeInsee}" th:text="${lieu.nomCom + ' (' + lieu.codeInsee + ')'}"></option>
+											<option value="">Autre</option>
+										</select>
+									</div>
+                                    
                                     <!-- Submit Button-->
                                     <div class="d-grid"><button class="btn btn-primary btn-lg" id="submitButton" type="submit">Suivant</button></div>
+                                    
                                 </form>
                             </div>
                         </div>
