modif app property

--- a/src/main/resources/templates/List_Monuments.html
+++ b/src/main/resources/templates/List_Monuments.html
@@ -17,7 +17,8 @@
                         <!-- Section Monument -->
                         <section>
                         	<div class="d-flex align-items-center justify-content-between mb-4">
-                                <a class="btn btn-primary px-4 py-3" href="#!" style="float: right;">
+                        		<h2></h2>
+                                <a class="btn btn-primary px-4 py-3" th:href="@{/monument/new}">
                                     Ajouter un monument
                                 </a>
                             </div>
