bouton ajouter lieu dans monument form

--- a/src/main/resources/templates/Create_Monument.html
+++ b/src/main/resources/templates/Create_Monument.html
@@ -82,6 +82,12 @@
 											<option value="">Autre</option>
 										</select>
 									</div>
+									
+									<div class="d-flex align-items-center justify-content-between mb-4">
+		                        		<h2></h2>
+		                                <a class="btn btn-primary px-4 py-3" th:href="@{/lieu/new}">
+		                                </a>
+		                            </div>
                                     
                                     <!-- Submit Button-->
                                     <div class="d-grid"><button class="btn btn-primary btn-lg" id="submitButton" type="submit">Suivant</button></div>
