--- a/src/main/resources/templates/Create_Global.html
+++ b/src/main/resources/templates/Create_Global.html
@@ -18,7 +18,7 @@
                         <div class="row gx-5 justify-content-center">
                             <div class="col-lg-8 col-xl-6">
                                 
-                                <form role="form" method="post" th:action="@{/monument/save}" th:object="${monument}" id="monumentForm">
+                                <form role="form" method="post" th:action="@{/form/save}" th:object="${monument}" id="monumentForm">
                                 
                                     <!-- nom -->
                                     <div class="form-floating mb-3">
@@ -98,7 +98,7 @@
                         <div class="row gx-5 justify-content-center">
                             <div class="col-lg-8 col-xl-6">
                                 
-                                <form role="form" method="post" th:action="@{/lieu/save}" th:object="${lieu}" id="lieuForm">
+                                <form role="form" method="post" th:action="@{/form/save}" th:object="${lieu}" id="lieuForm">
                                 
                                     <!-- nomCom -->
                                     <div class="form-floating mb-3">
@@ -167,7 +167,7 @@
                         <div class="row gx-5 justify-content-center">
                             <div class="col-lg-8 col-xl-6">
                                 
-                                <form role="form" method="post" th:action="@{/departement/save}" th:object="${departement}" id="departementForm">
+                                <form role="form" method="post" th:action="@{/form/save}" th:object="${departement}" id="departementForm">
                                 
                                     <!-- nomDep -->
                                     <div class="form-floating mb-3">
@@ -236,7 +236,7 @@
                         <div class="row gx-5 justify-content-center">
                             <div class="col-lg-8 col-xl-6">
                                 
-                                <form role="form" method="post" th:action="@{/celebrite/save}" th:object="${celebrite}" id="celebriteForm">
+                                <form role="form" method="post" th:action="@{/form/save}" th:object="${celebrite}" id="celebriteForm">
                                 
                                     <!-- nom -->
                                     <div class="form-floating mb-3">
