--- a/src/main/resources/templates/Create_Departement.html
+++ b/src/main/resources/templates/Create_Departement.html
@@ -19,11 +19,7 @@
                                 
                                 <form role="form" method="post" th:action="@{/departement/save}" th:object="${departement}" id="departementForm">
                                 
-                                	<!-- Champ en lecture seule pour insertedDep -->
-								    <label for="insertedDep">Numéro de département:</label>
-								    <input type="text" id="insertedDep" name="insertedDep" value="${insertedDep}" readonly />
-	                                
-                                    <!-- nomDep -->
+                                	<!-- nomDep -->
                                     <div class="form-floating mb-3">
                                         <input 
                                         	class="form-control" 
@@ -34,7 +30,7 @@
                                         <label for="nomDep">Nom du département</label>
                                     </div>
                                     
-                                    <!-- dep 
+                                    <!-- dep -->
                                     <div class="form-floating mb-3">
                                         <input 
                                         	class="form-control" 
@@ -43,7 +39,7 @@
                                         	th:field="*{dep}" 
                                         	placeholder="Entrez le numéro de département"/>
                                         <label for="dep">Numéro de département</label>
-                                    </div>-->
+                                    </div>
                                     
                                     <!-- reg -->
                                     <div class="form-floating mb-3">
@@ -65,8 +61,8 @@
                                         	th:field="*{chefLieu.codeInsee}" 
                                         	placeholder="Entrez le chef-Lieu"/>
                                         <label for="chefLieu">Chef-lieu</label>
-                                    </div>
-                                    
+                                    </div> 
+                                 
                                     <!-- Submit Button-->
                                     <div class="d-grid"><button class="btn btn-primary btn-lg" id="submitButton" type="submit">Suivant</button></div>
                                     
@@ -75,6 +71,7 @@
                         </div>
                     </div>
                 </div>
+                
             </section>
         </main>   
     </body>
