--- a/src/main/resources/templates/Create_Monument.html
+++ b/src/main/resources/templates/Create_Monument.html
@@ -74,13 +74,25 @@
                                         <label for="latitude">Latitude</label>
                                     </div>
                                     
-                                    <!-- lieu -->
+                                    <!-- lieu 
                                     <div class="form-floating mb-3">		        
 										<select class="form-control" name="codeLieu" th:field="*{codeLieu.codeInsee}">
 											<option value="" selected>Sélectionner un lieu</option>
 											<option th:each="lieu : ${lieux}" th:value="${lieu.codeInsee}" th:text="${lieu.nomCom + ' (' + lieu.codeInsee + ')'}"></option>
 
 										</select>
+									</div> -->
+									
+									<div class="form-floating mb-3">
+									    <select class="form-control" name="codeLieu" th:field="*{codeLieu.codeInsee}">
+									        <option value="" selected>Sélectionner un lieu</option>
+									        <th:block th:each="departement : ${departements}">
+									        	<option disabled value="" th:text="${'--------------------------------' + departement.nomDep + '--------------------------------'}"></option>
+									            <th:block th:each="lieu : ${departement.lieux}">
+									                <option th:value="${lieu.codeInsee}" th:text="${lieu.nomCom + ' (' + lieu.codeInsee + ')'}"></option>
+									            </th:each>
+									        </th:block>
+									    </select>
 									</div>
 									
 									<div class="d-flex align-items-center justify-content-between mb-4">
