modif lieu et dept

--- a/src/main/resources/templates/Create_Monument.html
+++ b/src/main/resources/templates/Create_Monument.html
@@ -74,15 +74,7 @@
                                         <label for="latitude">Latitude</label>
                                     </div>
                                     
-                                    <!-- lieu 
-                                    <div class="form-floating mb-3">		        
-										<select class="form-control" name="codeLieu" th:field="*{codeLieu.codeInsee}">
-											<option value="" selected>Sélectionner un lieu</option>
-											<option th:each="lieu : ${lieux}" th:value="${lieu.codeInsee}" th:text="${lieu.nomCom + ' (' + lieu.codeInsee + ')'}"></option>
-
-										</select>
-									</div> -->
-									
+                                    <!-- lieu -->
 									<div class="form-floating mb-3">
 									    <select class="form-control" name="codeLieu" th:field="*{codeLieu.codeInsee}">
 									        <option value="" selected>Sélectionner un lieu</option>
