--- a/src/main/resources/templates/Create_Departement.html
+++ b/src/main/resources/templates/Create_Departement.html
@@ -19,7 +19,13 @@
                                 
                                 <form role="form" method="post" th:action="@{/departement/save}" th:object="${departement}" id="departementForm">
                                 
+
                                 	<!-- nomDep -->
+
+
+
+                                    <!-- nomDep -->
+
                                     <div class="form-floating mb-3">
                                         <input 
                                         	class="form-control" 
