create a lieu or create a departement

--- a/src/main/resources/templates/Create_Lieu.html
+++ b/src/main/resources/templates/Create_Lieu.html
@@ -64,7 +64,7 @@
                                     </div>
 
 
-                                    <!-- dep 
+
                                     <div class="form-floating mb-3">
                                         <input
                                                 class="form-control"
@@ -73,7 +73,7 @@
                                                 th:field="*{departement.dep}"
                                                 placeholder="Entrez la latitude"/>
                                         <label for="dep">Numéro de département</label>
-                                    </div>-->
+                                    </div>
                                     
                                     <!-- dep (departement associé à ce lieu) -->
 								  <!--  <div class="form-floating mb-3">
