--- a/src/main/resources/templates/Create_Monument.html
+++ b/src/main/resources/templates/Create_Monument.html
@@ -19,6 +19,17 @@
                                 
                                 <form role="form" method="post" th:action="@{/monument/save}" th:object="${monument}" id="monumentForm">
                                 
+                                    <!-- geohash -->
+                                    <div class="form-floating mb-3">
+                                        <input 
+                                        	class="form-control" 
+                                        	type="text" 
+                                        	name="geohash" 
+                                        	th:field="*{geohash}" 
+                                        	placeholder="Entrez in id"/>
+                                        <label for="geohash">Saisir un identifiant</label>
+                                    </div>
+                                    
                                     <!-- nom -->
                                     <div class="form-floating mb-3">
                                         <input 
