--- a/src/main/resources/templates/Create_Lieu.html
+++ b/src/main/resources/templates/Create_Lieu.html
@@ -63,31 +63,22 @@
                                         <label for="latitude">Latitude</label>
                                     </div>
 
-
-                                    <!-- dep 
-                                    <div class="form-floating mb-3">
-                                        <input
-                                                class="form-control"
-                                                type="text"
-                                                name="dep"
-                                                th:field="*{departement.dep}"
-                                                placeholder="Entrez la latitude"/>
-                                        <label for="dep">Numéro de département</label>
-                                    </div>-->
-                                    
                                     <!-- dep (departement associé à ce lieu) -->
 								    <div class="form-floating mb-3">
-                                        <input 
-                                        	class="form-control" 
-                                        	type="text" 
-                                        	name="dep" 
-                                        	th:field="*{departement.dep}" 
-                                        	placeholder="Entrez le numéro de département"/>
-                                        <label for="dep">Numéro de département</label>
-                                    </div>
-								    
-								    <!-- Champ caché pour stocker le numéro de département -->
-    								<input type="hidden" name="insertedDep" th:value="${lieu.departement?.dep}" />
+									    <select class="form-control" name="dep" th:field="*{departement.dep}">
+									        <option value="" selected>Sélectionner un département</option>
+									        <th:block th:each="departement : ${departements}">
+									        	<option th:value="${departement.dep}" th:text="${departement.nomDep + ' (' + departement.dep + ')'}"></option>
+									        </th:block>
+									    </select>
+									</div>
+									
+									<div class="d-flex align-items-center justify-content-between mb-4">
+		                        		<h2></h2>
+		                                <a class="btn btn-primary px-4 py-3" th:href="@{/departement/new}">
+                                            Ajouter un département
+		                                </a>
+		                            </div>
                                     
                                     <!-- Submit Button-->
                                     <div class="d-grid"><button class="btn btn-primary btn-lg" id="submitButton" type="submit">Suivant</button></div>
