update celebrite et debut delete celebrite

--- a/src/main/resources/templates/List_Celebrites.html
+++ b/src/main/resources/templates/List_Celebrites.html
@@ -33,8 +33,8 @@
                                                 </ul>
                                             </div>
                                             <div style="float: right; display: flex; gap: 30px;" >
-                                            	<button class="btn btn-primary">Modifier</button>
-                                            	<button class="btn btn-primary">Supprimer</button>
+                                            	<a class="btn btn-primary px-4" th:href="@{/celebrite/{numC}/edit(numC=${celebrite.numCelebrite})}">Modifier</a>
+                                            	<a class="btn btn-primary px-4">Supprimer</a>
                                             </div>
                                         </div>
                                     </div>
