--- a/src/main/resources/templates/List_Lieux.html
+++ b/src/main/resources/templates/List_Lieux.html
@@ -16,6 +16,12 @@
 
                         <!-- Section Lieu -->
                         <section>
+                        	<div class="d-flex align-items-center justify-content-between mb-4">
+                        		<h2></h2>
+                                <a class="btn btn-primary px-4 py-3" th:href="@{/lieu/new}">
+                                    Ajouter un lieu
+                                </a>
+                            </div>
                             <div th:each="lieu : ${lieux}" class="card shadow border-0 rounded-4 mb-5">
                                 <div class="card-body p-5">
                                     <div class="row align-items-center gx-5">
@@ -32,8 +38,8 @@
                                                 </ul>
                                             </div>
                                             <div style="float: right; display: flex; gap: 30px;" >
-                                            	<button class="btn btn-primary">Modifier</button>
-                                            	<button class="btn btn-primary">Supprimer</button>
+                                            	<a class="btn btn-primary px-4">Modifier</a>
+                                            	<a class="btn btn-primary px-4">Supprimer</a>
                                             </div>
                                         </div>
                                     </div>
