--- a/src/main/resources/templates/List_Monuments.html
+++ b/src/main/resources/templates/List_Monuments.html
@@ -42,8 +42,8 @@
                                                 </ul>
                                             </div>
                                             <div style="float: right; display: flex; gap: 30px;" >
-                                            	<button class="btn btn-primary">Modifier</button>
-                                            	<button class="btn btn-primary">Supprimer</button>
+                                            	<a class="btn btn-primary px-4" th:href="@{/monument/{numMonum}/edit(numMonum=${monument.geohash})}">Modifier</a>
+                                            	<a class="btn btn-primary px-4">Supprimer</a>
                                             </div>
                                         </div>
                                     </div>
