edit and update celebrite + debut edit and update monument

--- a/src/main/resources/templates/List_Celebrites.html
+++ b/src/main/resources/templates/List_Celebrites.html
@@ -34,7 +34,7 @@
                                             </div>
                                             <div style="float: right; display: flex; gap: 30px;" >
                                             	<a class="btn btn-primary px-4" th:href="@{/celebrite/{numC}/edit(numC=${celebrite.numCelebrite})}">Modifier</a>
-                                            	<a class="btn btn-primary px-4">Supprimer</a>
+                                            	<a class="btn btn-primary px-4" th:href="@{/celebrite/{numC}/delete(numC=${celebrite.numCelebrite})}">Supprimer</a>
                                             </div>
                                         </div>
                                     </div>
