--- a/src/main/resources/templates/List_Monuments.html
+++ b/src/main/resources/templates/List_Monuments.html
@@ -43,7 +43,7 @@
                                             </div>
                                             <div style="float: right; display: flex; gap: 30px;" >
                                             	<a class="btn btn-primary px-4" th:href="@{/monument/{numMonum}/edit(numMonum=${monument.geohash})}">Modifier</a>
-                                            	<a class="btn btn-primary px-4">Supprimer</a>
+                                            	<a class="btn btn-primary px-4" th:href="@{/monument/{numMonum}/delete(numMonum=${monument.geohash})}">Supprimer</a>
                                             </div>
                                         </div>
                                     </div>
