--- a/src/main/resources/templates/List_Lieux.html
+++ b/src/main/resources/templates/List_Lieux.html
@@ -45,7 +45,7 @@
                                                 </ul>
                                             </div>
                                             <div style="float: right; display: flex; gap: 30px;" >
-                                            	<a class="btn btn-primary px-4">Modifier</a>
+                                            	<a class="btn btn-primary px-4" th:href="@{/lieu/{codeInsee}/edit(codeInsee=${lieu.codeInsee})}">Modifier</a>
                                             	<a class="btn btn-primary px-4" th:href="@{/lieu/{codeInsee}/delete(codeInsee=${lieu.codeInsee})}">Supprimer</a>
                                             </div>
                                         </div>
