premice spring security

--- a/src/main/resources/templates/Create_Celebrite.html
+++ b/src/main/resources/templates/Create_Celebrite.html
@@ -65,8 +65,8 @@
                                     
                                     <!-- Affichage des informations du monument -->
 									<div>
-									    <label>Nom du Monument: </label>
-									    <span th:text="${monument.nom}"></span>
+									    <label>Id du Monument: </label>
+									    <span th:text="${monument.geohash}"></span>
 									</div>
 									
                                     <!-- Submit Button-->
