--- a/src/main/resources/templates/Layout.html
+++ b/src/main/resources/templates/Layout.html
@@ -31,8 +31,9 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index.html">Trouver un monument</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">Connexion</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Chercher un monument</a></li>
+                    <li class="nav-item"><a class="nav-link" th:href="@{/login}">Connexion</a></li>
+                    <li class="nav-item"><a class="nav-link" th:href="@{/register}">S'inscrire</a></li>
                 </ul>
             </div>
         </div>
