--- a/src/main/resources/templates/Layout.html
+++ b/src/main/resources/templates/Layout.html
@@ -30,10 +30,11 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index.html">Chercher un monument</a></li>
+                    <li class="nav-item"><a class="nav-link" th:href="@{/login}">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" th:href="@{/search}">Chercher un monument</a></li>
                     <li class="nav-item"><a class="nav-link" th:href="@{/login}">Connexion</a></li>
                     <li class="nav-item"><a class="nav-link" th:href="@{/register}">S'inscrire</a></li>
+                    <li class="nav-item"><a class="nav-link" th:href="@{/logout}">Déconnexion</a></li>
                 </ul>
             </div>
         </div>
